--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password</string>
+    <string name="notification_app_name">Gerry</string>
+    <string name="notification_service_name">Gerry Service</string>
     <string name="notification_channel_name">Gerry Events</string>
     <string name="login_failed">"Login failed"</string>
     <string name="action_settings">Settings</string>
